--- a/App.config
+++ b/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key ="rpcusername" value ="kshitij16"/>
-		<add key ="rpcpassword" value ="kshitij123"/>
+		<add key ="rpcusername" value ="soumyadeep16"/>
+		<add key ="rpcpassword" value ="soumyadeep123"/>
 		<add key ="wallet_url" value ="http://localhost"/>
 		<add key ="wallet_port" value ="7313"/>
 	</appSettings>
